# aztec-diamond

./: .gitignore  CMakeLists.txt  README.md
src/: AztecTilingCounter.cpp  AztecTilingCounter.h  main.cpp
test/: AztecTilingCounterTest.cpp  CMakeLists.txt
